--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
     "streamsaver": "^2.0.6"
